Fixed post not rendering on mobile + code cleanup

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,8 @@ input {
 h5 {
   margin: .5em auto;
 }
+
+
+.modal-body > input {
+    max-width: 100%;
+}
